# zeroquant

./: .env.example  .gitignore  .rustfmt.toml  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DTraderclippy-current.txt  IMPROVEMENT_SUGGESTIONS.md  README.md  SUMMARY.md  docker-compose.yml
.claude/: settings.json
.sqlx/: query-04b9b25ff83f2a78fd29a1bd0e2033b84d2f6aa06b1a6f98699bd38ba44f99e8.json  query-0522296b631f9d321a03a2a711e0e6bbba6d26c72821ef1c26946ad1023ea4ec.json  query-0582587b2320046aa24c23ea63b385f2cbad5c4a21eba9a2f5a9e6fcc4553c7e.json  query-07f736b357540292def036ef87f1361123c299120137a69c9b66ec90b663415d.json  query-090662a0af885e1a7037897f1b7a88226126d9842115a7b5364f74c217568050.json  query-093912da8c7e56d02983cba04a5c819627ce674c339e21213c7a5b0dd483bb29.json  query-09ac7e162da1f14f48ab57a0a54794b41f03250136689d782d3bf03d85293fda.json  query-174cb42a102565508f94cb6f5877b1ec4e8aec3ad0f6aae027f89515c3a0eed8.json  query-1e0d6e5734684340e46dc65db5a7df364c74f8b2ebc01b5a916793c854ebc15f.json  query-20635d98e53c1c882e677002164fb9c09010871ea1ac24cd0ddfce1b034a2835.json  query-2365bc9fca534454999ecb25d43768b8f1ee9943f07651f00aaac75e7ec03025.json  query-252fdfb758bcc608d7039d78d3c62ffec7135b16ff67eca0f7c92f35fe878af2.json  query-2989ed0eb3a8deba612f0a0b484c1e586d02ee1932b93929817ae80e58ba03d4.json  query-2ba315e667239222ff428bdd9790b84333f8558feb5fa6147030dc6eb98eff8d.json  query-2c9e7c855141f8c0b2cc025523bd731cbbbd055ce837a66a0fe7cab8dace7d5c.json  query-2d83a6a565863ff197b94f8c6dcd41c0e201bb0f58f107fa6876f121ad94a069.json  (+41 more)
docs/: IMPROVEMENTS_EN.md  (+25 more)
(+494 files in other folders)
