[package]
name = "zeroquant"
version = "0.1.0"
edition = "2021"
authors = ["berrzebb"]
description = "A Rust-based Quant bot supporting multiple exchanges with backtesting, simulation, trading logs, and strategies"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
